<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/Screen">

  <androidx.constraintlayout.widget.ConstraintLayout
      android:id="@+id/layout_login"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      tools:context=".ui.activity.LoginActivity">

    <ImageView
        android:id="@+id/login_img"
        android:layout_width="201dp"
        android:layout_height="248dp"
        android:layout_marginTop="8dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/title"
        style="@style/Text"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/poppins_extra_bold"
        android:text="@string/title"
        android:textSize="26sp"
        app:layout_constraintStart_toStartOf="@+id/sub_title"
        app:layout_constraintTop_toBottomOf="@id/login_img" />

    <TextView
        android:id="@+id/sub_title"
        style="@style/Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/sub_title"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/field_email"
        app:layout_constraintStart_toStartOf="@+id/field_email"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintVertical_bias="0.032" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/field_login_name"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="32dp"
        app:expandedHintEnabled="false"
        app:hintAnimationEnabled="false"
        app:hintEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sub_title"
        app:startIconDrawable="@drawable/profile"
        app:startIconTint="@color/black">

      <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/ed_login_name"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          style="@style/backgorund_field"
          android:hint="@string/tv_nama"
          android:inputType="textEmailAddress"
          android:textColor="@color/black"
          android:textSize="15sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/field_email"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="32dp"
        app:expandedHintEnabled="false"
        app:hintAnimationEnabled="false"
        app:hintEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/field_login_name"
        app:startIconDrawable="@drawable/icon_email"
        app:startIconTint="@color/black">

      <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/ed_login_email"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          style="@style/backgorund_field"
          android:hint="@string/tv_email"
          android:inputType="textEmailAddress"
          android:textColor="@color/black"
          android:textSize="15sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/field_password"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="32dp"
        app:expandedHintEnabled="false"
        app:hintAnimationEnabled="false"
        app:hintEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/field_email"
        app:startIconDrawable="@drawable/baseline_lock_24"
        app:endIconDrawable="@drawable/baseline_visibility_off_24"
        app:endIconTint="@color/black"
        app:startIconTint="@color/black"
        app:passwordToggleEnabled="true">

      <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/ed_login_password"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          style="@style/backgorund_field"
          android:hint="@string/tv_password"
          android:inputType="textPassword"
          android:textColor="@color/black"
          android:textSize="15sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="32dp"
        style="@style/Button"
        android:fontFamily="@font/poppins_semi_bold"
        android:paddingVertical="10dp"
        android:text="@string/btnLogin_text"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/field_password"
        android:textAllCaps="false" />

    <TextView
        android:id="@+id/continue_with"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:fontFamily="@font/poppins_semi_bold"
        android:gravity="center"
        android:text="@string/continue_with"
        style="@style/Text"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_login" />

    <View
        android:id="@+id/divider2"
        android:layout_width="70dp"
        android:layout_height="2dp"
        android:background="@drawable/corner_white_15dp"
        app:layout_constraintBottom_toBottomOf="@+id/continue_with"
        app:layout_constraintEnd_toStartOf="@+id/continue_with"
        app:layout_constraintHorizontal_bias="0.84"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_login"
        app:layout_constraintVertical_bias="0.68" />

    <View
        android:id="@+id/divider3"
        android:layout_width="70dp"
        android:layout_height="2dp"
        android:background="@drawable/corner_white_15dp"
        app:layout_constraintBottom_toBottomOf="@+id/continue_with"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.081"
        app:layout_constraintStart_toEndOf="@+id/continue_with"
        app:layout_constraintTop_toBottomOf="@+id/btn_login"
        app:layout_constraintVertical_bias="0.68" />

    <Button
        android:id="@+id/google_signin_button"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/corner_white_15dp"
        android:drawableLeft="@drawable/ic_google"
        android:paddingStart="50dp"
        android:paddingEnd="50dp"
        android:text="@string/btnLogin_google_text"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:fontFamily="@font/poppins_semi_bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/continue_with" />



    <TextView
        android:id="@+id/new_to_optix"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/new_to_optix"
        style="@style/Text"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.122"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/google_signin_button" />

    <TextView
        android:id="@+id/register_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/create_account_now"
        style="@style/Text"
        android:textSize="15sp"
        app:layout_constraintStart_toEndOf="@id/new_to_optix"
        app:layout_constraintTop_toTopOf="@id/new_to_optix" />

  </androidx.constraintlayout.widget.ConstraintLayout>

  <ProgressBar
      android:id="@+id/loading"
      android:layout_width="50dp"
      android:layout_height="50dp"
      android:layout_gravity="center"
      android:visibility="gone" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>
