<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/Screen"
    tools:context=".ui.fragment.cart.CartFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView_cart"
        android:layout_width="match_parent"
        android:layout_height="627dp"
        tools:listitem="@layout/item_row_cart" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bottomSection"
        style="@style/Button"
        android:layout_width="match_parent"
        android:layout_height="104dp"
        android:background="@drawable/corner_blue_15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recyclerView_cart"
        app:layout_constraintVertical_bias="0.0">


        <CheckBox
            android:id="@+id/checkBox_selectAll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/sellect_all"
            android:fontFamily="@font/poppins_bold"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.361" />

        <TextView
            android:id="@+id/textView_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/total"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/button_checkout"
            app:layout_constraintTop_toTopOf="@+id/button_checkout"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/total_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/harga"
            android:textColor="@color/yellow_banner3"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/button_checkout"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/checkBox_selectAll"
            app:layout_constraintTop_toBottomOf="@+id/textView_total"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/button_checkout"
            android:layout_width="93dp"
            android:layout_height="63dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="32dp"
            android:background="@drawable/corner_white_15dp"
            android:backgroundTint="@color/yellow_banner3"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/button_checkOut"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.32" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
